@startuml
title Sistema de Moeda Estudantil - Diagrama de Classes (Release 1)
left to right direction

'======================
' ENUM
'======================
enum CategoriaEnum {
  Alimentacao
  Educacao
  Cursos
  Brinde
  Servicos
  Entretenimento
}

'======================
' HIERARQUIA DE USUARIO
'======================
class Usuario {
  nome : String
  email : String
  senha : String
}

class PessoaFisica {
  cpf : String
  rg : String
}

class PessoaJuridica {
  cnpj : String
}

Usuario <|-- PessoaFisica
Usuario <|-- PessoaJuridica

'======================
' CLASSES PRINCIPAIS
'======================
class Aluno {
  endereco : String
  curso : String
  saldo : double
}

class Professor {
  departamento : String
  saldo : double
}

class EmpresaParceira {
  endereco : String
}

PessoaFisica <|-- Aluno
PessoaFisica <|-- Professor
PessoaJuridica <|-- EmpresaParceira

'======================
' INSTITUICAO
'======================
class Instituicao {
  nome : String
  cnpj : String
}

Aluno "1" --> "1" Instituicao : pertence
Professor "1" --> "1" Instituicao : vinculado

'======================
' TRANSACAO
'======================
class Transacao {
  data : Date
  valor : double
  mensagem : String
  tipo : String
}

Professor "1" --> "0..*" Transacao : origina
Transacao "0..*" --> "1" Aluno : destinado a

'======================
' VANTAGEM
'======================
class Vantagem {
  nome : String
  custo : double
  descricao : String
  foto : String
}

EmpresaParceira "1" --> "0..*" Vantagem : oferece
Vantagem "0..*" --> "1" CategoriaEnum : categorizada

'======================
' RESGATE E CUPOM
'======================
class Resgate {
  dataResgate : Date
  codigoVerificacao : String
}

class Cupom {
  codigo : String
  dataGeracao : Date
}

Aluno "1" --> "0..*" Resgate : realiza
Resgate "0..*" --> "1" Vantagem : referente a
Resgate "1" --> "1" Cupom : gera

@enduml
